# PlotWeaver

./: .dockerignore  .gitignore  AGENTS.md  PROJECT_STRUCTURE.md  README.md  SPEC.md  all_plan.md  docker-compose.yml  prompt.md  skills-lock.json  大纲.md  本地运行.md  🖋️ PlotWeaver The Light Novel Alchemist.md
apps/api/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260316_0001_create_core_task_c_tables.py  20260316_0002_add_indexes_jsonb.py  20260316_0003_enable_rls.py  20260316_0004_add_run_orchestration_state_and_events.py  20260318_0005_add_memory_decision_tracking_fields.py
apps/api/scripts/: backfill_day6_to_db.py  check_llm_setup.py
apps/api/src/plotweaver_api/: __init__.py  main.py
apps/api/src/plotweaver_api/core/: config.py  contracts.py  errors.py  logging.py
apps/api/src/plotweaver_api/db/: __init__.py  models.py  session.py  settings.py
apps/api/src/plotweaver_api/dependencies/: __init__.py  auth.py  db.py  runtime.py  services.py
apps/api/src/plotweaver_api/prompts/: memory_characters.txt  memory_characters_delta.txt  memory_curator_system.txt  memory_curator_user.txt  memory_story_so_far.txt  memory_story_so_far_delta.txt  memory_world_rules.txt  memory_world_rules_delta.txt  planner_system.txt  planner_user.txt  reviewer_system.txt  reviewer_user.txt  writer_system.txt  writer_user.txt
apps/api/tests/: test_api_smoke.py  test_orchestrator_service.py  test_services_phase2.py
apps/api/tests/integration/: test_api_run_integration.py
docs/: README.md
infra/: README.md
(+218 files in other folders)
