[project]
name = "plotweaver-api"
version = "0.1.0"
description = "PlotWeaver API backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "sqlalchemy>=2.0.36",
  "alembic>=1.14.0",
  "psycopg[binary]>=3.2.0",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.6.0",
  "fastapi>=0.116.0",
  "uvicorn[standard]>=0.35.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-cov>=6.0.0",
  "jsonschema>=4.24.0",
  "httpx>=0.28.0",
]

[tool.alembic]
script_location = "alembic"
prepend_sys_path = "src"

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"
